--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
             </h1>
             <p class="hero__subtitle">Watch anywhere and cancel anytime.</p>
             <p class="hero__discription">Ready to Watch? Enter your email to renew your membership.</p>
+        
+            <div class="email__form__container">
+                <div class="form__container">
+                    <input type="email" class="email__input" placeholder=" ">
+                    <label for="" class="email__label">Email Address</label>
+                </div>
+                <button class="primary__button">
+                    Get Started <i class="fas fa-chevron-right"></i>
+                </button>
+            </div>
+
+            
         </div>
     </main>
 </body>
